exports[`parseWithReactDocgen exportName coverage > aliased named export: export { Foo as Bar } 1`] = `
[
  {
    "description": "",
    "methods": [],
    "displayName": "Foo",
    "definedInFile": "/virtual/Component.tsx",
    "actualName": "Foo",
    "exportName": "Bar"
  }
]
`;

exports[`parseWithReactDocgen exportName coverage > aliased to default: export { Foo as default } 1`] = `
[
  {
    "description": "",
    "methods": [],
    "displayName": "Foo",
    "definedInFile": "/virtual/Component.tsx",
    "actualName": "Foo",
    "exportName": "default"
  }
]
`;

exports[`parseWithReactDocgen exportName coverage > export list: export { Foo } 1`] = `
[
  {
    "description": "",
    "methods": [],
    "displayName": "Foo",
    "definedInFile": "/virtual/Component.tsx",
    "actualName": "Foo",
    "exportName": "Foo"
  }
]
`;

exports[`parseWithReactDocgen exportName coverage > inline anonymous default export (arrow function) 1`] = `
[
  {
    "description": "",
    "methods": [],
    "definedInFile": "/virtual/Component.tsx",
    "actualName": "",
    "exportName": "default"
  }
]
`;

exports[`parseWithReactDocgen exportName coverage > inline default export function declaration 1`] = `
[
  {
    "description": "",
    "methods": [],
    "displayName": "Foo",
    "definedInFile": "/virtual/Component.tsx",
    "actualName": "Foo",
    "exportName": "default"
  }
]
`;

exports[`parseWithReactDocgen exportName coverage > multiple components with different export styles 1`] = `
[
  {
    "description": "",
    "methods": [],
    "displayName": "A",
    "definedInFile": "/virtual/Component.tsx",
    "actualName": "A",
    "exportName": "A"
  },
  {
    "description": "",
    "methods": [],
    "displayName": "B",
    "definedInFile": "/virtual/Component.tsx",
    "actualName": "B",
    "exportName": "Beta"
  },
  {
    "description": "",
    "methods": [],
    "displayName": "C",
    "definedInFile": "/virtual/Component.tsx",
    "actualName": "C",
    "exportName": "default"
  }
]
`;

exports[`parseWithReactDocgen exportName coverage > named export: export const Foo = ... 1`] = `
[
  {
    "description": "",
    "methods": [],
    "displayName": "Foo",
    "definedInFile": "/virtual/Component.tsx",
    "actualName": "Foo",
    "exportName": "Foo"
  }
]
`;

exports[`parseWithReactDocgen exportName coverage > named export: export function Foo() {} 1`] = `
[
  {
    "description": "",
    "methods": [],
    "displayName": "Foo",
    "definedInFile": "/virtual/Component.tsx",
    "actualName": "Foo",
    "exportName": "Foo"
  }
]
`;

exports[`parseWithReactDocgen exportName coverage > separate default export identifier 1`] = `
[
  {
    "description": "",
    "methods": [],
    "displayName": "Foo",
    "definedInFile": "/virtual/Component.tsx",
    "actualName": "Foo",
    "exportName": "default"
  }
]
`;

exports[`parseWithReactDocgen prop extraction > JSDoc descriptions 1`] = `
[
  {
    "description": "A tooltip component",
    "methods": [],
    "displayName": "Tooltip",
    "definedInFile": "/virtual/Component.tsx",
    "actualName": "Tooltip",
    "exportName": "Tooltip",
    "props": {
      "content": {
        "required": true,
        "tsType": {
          "name": "string"
        },
        "description": "The content to display"
      }
    }
  }
]
`;

exports[`parseWithReactDocgen prop extraction > React.FC pattern 1`] = `
[
  {
    "description": "",
    "methods": [],
    "displayName": "Button",
    "definedInFile": "/virtual/Component.tsx",
    "actualName": "Button",
    "exportName": "Button",
    "props": {
      "children": {
        "required": true,
        "tsType": {
          "name": "ReactReactNode",
          "raw": "React.ReactNode"
        },
        "description": ""
      },
      "variant": {
        "required": false,
        "tsType": {
          "name": "union",
          "raw": "'primary' | 'secondary'",
          "elements": [
            {
              "name": "literal",
              "value": "'primary'"
            },
            {
              "name": "literal",
              "value": "'secondary'"
            }
          ]
        },
        "description": "",
        "defaultValue": {
          "value": "'primary'",
          "computed": false
        }
      }
    }
  }
]
`;

exports[`parseWithReactDocgen prop extraction > basic typed props: string, number, boolean 1`] = `
[
  {
    "description": "",
    "methods": [],
    "displayName": "MyComponent",
    "definedInFile": "/virtual/Component.tsx",
    "actualName": "MyComponent",
    "exportName": "MyComponent",
    "props": {
      "label": {
        "required": true,
        "tsType": {
          "name": "string"
        },
        "description": ""
      },
      "count": {
        "required": true,
        "tsType": {
          "name": "number"
        },
        "description": ""
      },
      "visible": {
        "required": true,
        "tsType": {
          "name": "boolean"
        },
        "description": ""
      }
    }
  }
]
`;

exports[`parseWithReactDocgen prop extraction > comprehensive prop types 1`] = `
[
  {
    "description": "A detailed button component with comprehensive documentation",
    "methods": [],
    "displayName": "DetailedButton",
    "definedInFile": "/virtual/Component.tsx",
    "actualName": "DetailedButton",
    "exportName": "DetailedButton",
    "props": {
      "children": {
        "required": true,
        "tsType": {
          "name": "ReactReactNode",
          "raw": "React.ReactNode"
        },
        "description": ""
      },
      "variant": {
        "required": false,
        "tsType": {
          "name": "union",
          "raw": "'primary' | 'secondary' | 'danger'",
          "elements": [
            {
              "name": "literal",
              "value": "'primary'"
            },
            {
              "name": "literal",
              "value": "'secondary'"
            },
            {
              "name": "literal",
              "value": "'danger'"
            }
          ]
        },
        "description": "",
        "defaultValue": {
          "value": "'primary'",
          "computed": false
        }
      },
      "disabled": {
        "required": false,
        "tsType": {
          "name": "boolean"
        },
        "description": "",
        "defaultValue": {
          "value": "false",
          "computed": false
        }
      },
      "label": {
        "required": false,
        "tsType": {
          "name": "string"
        },
        "description": ""
      },
      "priority": {
        "required": false,
        "tsType": {
          "name": "number"
        },
        "description": ""
      },
      "tags": {
        "required": false,
        "tsType": {
          "name": "Array",
          "elements": [
            {
              "name": "string"
            }
          ],
          "raw": "string[]"
        },
        "description": ""
      },
      "steps": {
        "required": false,
        "tsType": {
          "name": "Array",
          "elements": [
            {
              "name": "signature",
              "type": "object",
              "raw": "{ id: string; done: boolean }",
              "signature": {
                "properties": [
                  {
                    "key": "id",
                    "value": {
                      "name": "string",
                      "required": true
                    }
                  },
                  {
                    "key": "done",
                    "value": {
                      "name": "boolean",
                      "required": true
                    }
                  }
                ]
              }
            }
          ],
          "raw": "Array<{ id: string; done: boolean }>"
        },
        "description": ""
      },
      "coordinates": {
        "required": false,
        "tsType": {
          "name": "tuple",
          "raw": "[number, number]",
          "elements": [
            {
              "name": "number"
            },
            {
              "name": "number"
            }
          ]
        },
        "description": ""
      },
      "metadata": {
        "required": false,
        "tsType": {
          "name": "signature",
          "type": "object",
          "raw": "{\\n  id: string;\\n  description?: string;\\n  flags?: Record<string, boolean>;\\n}",
          "signature": {
            "properties": [
              {
                "key": "id",
                "value": {
                  "name": "string",
                  "required": true
                }
              },
              {
                "key": "description",
                "value": {
                  "name": "string",
                  "required": false
                }
              },
              {
                "key": "flags",
                "value": {
                  "name": "Record",
                  "elements": [
                    {
                      "name": "string"
                    },
                    {
                      "name": "boolean"
                    }
                  ],
                  "raw": "Record<string, boolean>",
                  "required": false
                }
              }
            ]
          }
        },
        "description": ""
      },
      "styleOverrides": {
        "required": false,
        "tsType": {
          "name": "Record",
          "elements": [
            {
              "name": "string"
            },
            {
              "name": "union",
              "raw": "string | number",
              "elements": [
                {
                  "name": "string"
                },
                {
                  "name": "number"
                }
              ]
            }
          ],
          "raw": "Record<string, string | number>"
        },
        "description": ""
      },
      "note": {
        "required": false,
        "tsType": {
          "name": "union",
          "raw": "string | null",
          "elements": [
            {
              "name": "string"
            },
            {
              "name": "null"
            }
          ]
        },
        "description": ""
      },
      "onPress": {
        "required": false,
        "tsType": {
          "name": "signature",
          "type": "function",
          "raw": "(event: GestureResponderEvent) => void",
          "signature": {
            "arguments": [
              {
                "type": {
                  "name": "GestureResponderEvent"
                },
                "name": "event"
              }
            ],
            "return": {
              "name": "void"
            }
          }
        },
        "description": ""
      },
      "onClose": {
        "required": false,
        "tsType": {
          "name": "signature",
          "type": "function",
          "raw": "() => Promise<void>",
          "signature": {
            "arguments": [],
            "return": {
              "name": "Promise",
              "elements": [
                {
                  "name": "void"
                }
              ],
              "raw": "Promise<void>"
            }
          }
        },
        "description": ""
      },
      "mode": {
        "required": false,
        "tsType": {
          "name": "union",
          "raw": "| { type: 'static'; value: string }\\n| { type: 'dynamic'; compute: () => string }",
          "elements": [
            {
              "name": "signature",
              "type": "object",
              "raw": "{ type: 'static'; value: string }",
              "signature": {
                "properties": [
                  {
                    "key": "type",
                    "value": {
                      "name": "literal",
                      "value": "'static'",
                      "required": true
                    }
                  },
                  {
                    "key": "value",
                    "value": {
                      "name": "string",
                      "required": true
                    }
                  }
                ]
              }
            },
            {
              "name": "signature",
              "type": "object",
              "raw": "{ type: 'dynamic'; compute: () => string }",
              "signature": {
                "properties": [
                  {
                    "key": "type",
                    "value": {
                      "name": "literal",
                      "value": "'dynamic'",
                      "required": true
                    }
                  },
                  {
                    "key": "compute",
                    "value": {
                      "name": "signature",
                      "type": "function",
                      "raw": "() => string",
                      "signature": {
                        "arguments": [],
                        "return": {
                          "name": "string"
                        }
                      },
                      "required": true
                    }
                  }
                ]
              }
            }
          ]
        },
        "description": ""
      },
      "size": {
        "required": false,
        "tsType": {
          "name": "union",
          "raw": "'small' | 'medium' | 'large'",
          "elements": [
            {
              "name": "literal",
              "value": "'small'"
            },
            {
              "name": "literal",
              "value": "'medium'"
            },
            {
              "name": "literal",
              "value": "'large'"
            }
          ]
        },
        "description": ""
      },
      "config": {
        "required": false,
        "tsType": {
          "name": "unknown"
        },
        "description": ""
      },
      "fetchData": {
        "required": false,
        "tsType": {
          "name": "signature",
          "type": "function",
          "raw": "() => Promise<{ result: string[] }>",
          "signature": {
            "arguments": [],
            "return": {
              "name": "Promise",
              "elements": [
                {
                  "name": "signature",
                  "type": "object",
                  "raw": "{ result: string[] }",
                  "signature": {
                    "properties": [
                      {
                        "key": "result",
                        "value": {
                          "name": "Array",
                          "elements": [
                            {
                              "name": "string"
                            }
                          ],
                          "raw": "string[]",
                          "required": true
                        }
                      }
                    ]
                  }
                }
              ],
              "raw": "Promise<{ result: string[] }>"
            }
          }
        },
        "description": ""
      },
      "lifecycleHooks": {
        "required": false,
        "tsType": {
          "name": "Array",
          "elements": [
            {
              "name": "signature",
              "type": "function",
              "raw": "() => void",
              "signature": {
                "arguments": [],
                "return": {
                  "name": "void"
                }
              }
            }
          ],
          "raw": "Array<() => void>"
        },
        "description": ""
      },
      "renderPrefix": {
        "required": false,
        "tsType": {
          "name": "signature",
          "type": "function",
          "raw": "() => React.ReactNode",
          "signature": {
            "arguments": [],
            "return": {
              "name": "ReactReactNode",
              "raw": "React.ReactNode"
            }
          }
        },
        "description": ""
      }
    }
  }
]
`;

exports[`parseWithReactDocgen prop extraction > default values 1`] = `
[
  {
    "description": "",
    "methods": [],
    "displayName": "Alert",
    "definedInFile": "/virtual/Component.tsx",
    "actualName": "Alert",
    "exportName": "Alert",
    "props": {
      "message": {
        "required": true,
        "tsType": {
          "name": "string"
        },
        "description": ""
      },
      "severity": {
        "required": false,
        "tsType": {
          "name": "string"
        },
        "description": "",
        "defaultValue": {
          "value": "'info'",
          "computed": false
        }
      }
    }
  }
]
`;

exports[`parseWithReactDocgen prop extraction > forwardRef 1`] = `
[
  {
    "description": "",
    "methods": [],
    "displayName": "Input",
    "definedInFile": "/virtual/Component.tsx",
    "actualName": "Input",
    "exportName": "Input",
    "props": {
      "placeholder": {
        "required": false,
        "tsType": {
          "name": "string"
        },
        "description": ""
      },
      "editable": {
        "required": false,
        "tsType": {
          "name": "boolean"
        },
        "description": ""
      }
    }
  }
]
`;

exports[`parseWithReactDocgen prop extraction > function props 1`] = `
[
  {
    "description": "",
    "methods": [],
    "displayName": "Callback",
    "definedInFile": "/virtual/Component.tsx",
    "actualName": "Callback",
    "exportName": "Callback",
    "props": {
      "onSubmit": {
        "required": true,
        "tsType": {
          "name": "signature",
          "type": "function",
          "raw": "() => boolean",
          "signature": {
            "arguments": [],
            "return": {
              "name": "boolean"
            }
          }
        },
        "description": ""
      },
      "onClick": {
        "required": false,
        "tsType": {
          "name": "signature",
          "type": "function",
          "raw": "(id: string) => void",
          "signature": {
            "arguments": [
              {
                "type": {
                  "name": "string"
                },
                "name": "id"
              }
            ],
            "return": {
              "name": "void"
            }
          }
        },
        "description": ""
      }
    }
  }
]
`;

exports[`parseWithReactDocgen prop extraction > inline props in function signature 1`] = `
[
  {
    "description": "",
    "methods": [],
    "displayName": "Badge",
    "definedInFile": "/virtual/Component.tsx",
    "actualName": "Badge",
    "exportName": "Badge",
    "props": {
      "count": {
        "required": true,
        "tsType": {
          "name": "number"
        },
        "description": ""
      },
      "color": {
        "required": true,
        "tsType": {
          "name": "string"
        },
        "description": ""
      }
    }
  }
]
`;

exports[`parseWithReactDocgen prop extraction > interface props 1`] = `
[
  {
    "description": "",
    "methods": [],
    "displayName": "Button",
    "definedInFile": "/virtual/Component.tsx",
    "actualName": "Button",
    "exportName": "Button",
    "props": {
      "label": {
        "required": true,
        "tsType": {
          "name": "string"
        },
        "description": ""
      },
      "disabled": {
        "required": false,
        "tsType": {
          "name": "boolean"
        },
        "description": ""
      }
    }
  }
]
`;

exports[`parseWithReactDocgen prop extraction > multiple named exports 1`] = `
[
  {
    "description": "",
    "methods": [],
    "displayName": "Input",
    "definedInFile": "/virtual/Component.tsx",
    "actualName": "Input",
    "exportName": "Input",
    "props": {
      "placeholder": {
        "required": false,
        "tsType": {
          "name": "string"
        },
        "description": ""
      }
    }
  },
  {
    "description": "",
    "methods": [],
    "displayName": "Label",
    "definedInFile": "/virtual/Component.tsx",
    "actualName": "Label",
    "exportName": "Label",
    "props": {
      "children": {
        "required": true,
        "tsType": {
          "name": "ReactReactNode",
          "raw": "React.ReactNode"
        },
        "description": ""
      }
    }
  }
]
`;

exports[`parseWithReactDocgen prop extraction > optional props 1`] = `
[
  {
    "description": "",
    "methods": [],
    "displayName": "MyComponent",
    "definedInFile": "/virtual/Component.tsx",
    "actualName": "MyComponent",
    "exportName": "MyComponent",
    "props": {
      "title": {
        "required": true,
        "tsType": {
          "name": "string"
        },
        "description": ""
      },
      "subtitle": {
        "required": false,
        "tsType": {
          "name": "string"
        },
        "description": ""
      }
    }
  }
]
`;

exports[`parseWithReactDocgen prop extraction > type alias props 1`] = `
[
  {
    "description": "",
    "methods": [],
    "displayName": "Card",
    "definedInFile": "/virtual/Component.tsx",
    "actualName": "Card",
    "exportName": "Card",
    "props": {
      "title": {
        "required": true,
        "tsType": {
          "name": "string"
        },
        "description": ""
      },
      "elevation": {
        "required": false,
        "tsType": {
          "name": "number"
        },
        "description": ""
      }
    }
  }
]
`;

exports[`parseWithReactDocgen prop extraction > union types 1`] = `
[
  {
    "description": "",
    "methods": [],
    "displayName": "Tag",
    "definedInFile": "/virtual/Component.tsx",
    "actualName": "Tag",
    "exportName": "Tag",
    "props": {
      "variant": {
        "required": true,
        "tsType": {
          "name": "union",
          "raw": "'primary' | 'secondary' | 'danger'",
          "elements": [
            {
              "name": "literal",
              "value": "'primary'"
            },
            {
              "name": "literal",
              "value": "'secondary'"
            },
            {
              "name": "literal",
              "value": "'danger'"
            }
          ]
        },
        "description": ""
      },
      "size": {
        "required": false,
        "tsType": {
          "name": "union",
          "raw": "'small' | 'large'",
          "elements": [
            {
              "name": "literal",
              "value": "'small'"
            },
            {
              "name": "literal",
              "value": "'large'"
            }
          ]
        },
        "description": ""
      }
    }
  }
]
`;
